<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ch.uzh.ifi.csg.smartcontract.app.account.AccountActivity">

    <include
        layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:background="@color/cardview_shadow_start_color"
        android:orientation="horizontal">

        <include layout="@layout/fragment_account_balance"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:layout_margin="8dp"
            android:layout_height="wrap_content">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_add"
                android:layout_alignParentRight="true"
                android:onClick="onAddButtonClick"
                android:id="@+id/account_add_button"
                android:background="@null"/>

        </LinearLayout>


    </RelativeLayout>

    <fragment
        android:name="ch.uzh.ifi.csg.smartcontract.app.account.AccountFragment"
        android:id="@+id/account_fragment"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout="@layout/fragment_account_list" />

</LinearLayout>
